--- a/packages/frontend/src/css/quasar.variables.scss
+++ b/packages/frontend/src/css/quasar.variables.scss
@@ -12,13 +12,25 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #1976D2;
+$primary : #1976D2;
 $secondary : #26A69A;
-$accent    : #9C27B0;
+$accent : #9C27B0;
 
-$dark      : #1D1D1D;
+$dark : #1D1D1D;
 
-$positive  : #21BA45;
-$negative  : #C10015;
-$info      : #31CCEC;
-$warning   : #F2C037;
+$positive : #21BA45;
+$negative : #C10015;
+$info : #31CCEC;
+$warning : #F2C037;
+
+// $h1: (size: 6rem, line-height: 6rem, letter-spacing: -.01562em, weight: 300) !default;
+// $h2: (size: 3.75rem, line-height: 3.75rem, letter-spacing: -.00833em, weight: 300) !default;
+// $h3: (size: 3rem, line-height: 3.125rem, letter-spacing: normal, weight: 400) !default;
+// $h4: (size: 2.125rem, line-height: 2.5rem, letter-spacing: .00735em, weight: 400) !default;
+$h1: (size: 1rem, line-height: 1.4rem, letter-spacing: normal, weight: 300) !default;
+$h2: (size: inherit, line-height: inherit, letter-spacing: inherit, weight: inherit) !default;
+$h3: (size: inherit, line-height: inherit, letter-spacing: inherit, weight: inherit) !default;
+$h4: (size: inherit, line-height: inherit, letter-spacing: inherit, weight: inherit) !default;
+$h5: (size: inherit, line-height: inherit, letter-spacing: inherit, weight: inherit) !default;
+$h5: (size: inherit, line-height: inherit, letter-spacing: inherit, weight: inherit) !default;
+// $h6: (size: 1.25rem, line-height: 2rem, letter-spacing: .0125em, weight: 500) !default;
